# WeatherStationPico

./: CMakeLists.txt  ProjectCase_top.stl  README.md  RTC.h  Recorder.h  RotaryEncoder.h  WeatherStation.c  WeatherStation.h  lcd.h
.github/workflows/: c-cpp.yml
builds/: WeatherStation-1.1.uf2  WeatherStation-1.2.uf2  WeatherStation-1.3.1.uf2  WeatherStation-1.3.uf2
models/: Project Box.FCStd  ProjectCase_bottom.stl  WeatherStationCap.FCStd
